# ros2_ws

install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker  topics_practice  topics_practice_b
install/cpp_pubsub/share/cpp_pubsub/: package.xml
install/cpp_srvcli/lib/cpp_srvcli/: add_two_ints_client  add_two_ints_server  service_practice
install/my_package/share/my_package/: package.xml
install/py_pubsub/lib/py_pubsub/: a = py_pubsub.topics_practice:maintopics_practice_b  talker = py_pubsub.publisher_scriptmaintopics_practice  topics_practice  topics_practice = py_pubsub.topics_practice:maintopics_practice_b  topics_practice_b
install/py_srvcli/lib/py_srvcli/: client_node  service_node
install/py_srvcli/share/py_srvcli/: package.sh  package.xml
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: listener.cpp  publisher_script.cpp  topics_practice.cpp  topics_practice_b.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  service_practice.cpp
src/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker  topics_practice  topics_practice_b
src/install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/my_package/share/my_package/: package.sh  package.xml
src/install/my_package_cpp/lib/my_package_cpp/: my_node
src/log/: latest_build
src/my_package/: setup.py
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: publisher_script.py  topics_practice_b.py
src/py_srvcli/: setup.py
src/py_srvcli/py_srvcli/: client_node.py
(+25 files in other folders)
